<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.reminderapp.ui.notedetails.NoteDetailsViewModel" />
    </data>

    <LinearLayout
        style="@style/Theme.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_color"
        android:orientation="vertical"
        android:theme="@style/Theme.AppCompat.Light">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/myAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/myCollapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/myToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_view_margin"
            android:background="@android:color/transparent"
            android:hint="@string/enter_title"
            android:minHeight="@dimen/toolbar_height"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="22sp" />


        <LinearLayout
            android:id="@+id/container_note_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_view_margin"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_details" />

            <EditText
                android:id="@+id/note_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/text_note_details"
                android:textColor="#000"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/container_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_view_margin"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_event_available_details" />

            <TextView
                android:id="@+id/date_time_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginLeft="5dp"
                android:hint="@string/text_due_date"
                android:textColor="#000"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>


</layout>