<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.reminderapp.ui.notedetails.BottomSheetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adding_note_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:hint="@string/text_enter_a_title"
            android:text="@={viewModel.titleEditText}"
            android:textColor="#000"
            android:textSize="22sp"
             />


            <EditText
                android:id="@+id/addingDetailsEditeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="33dp"
                android:layout_marginVertical="8dp"
                android:padding="8dp"
                android:hint="@string/note_details"
                android:background="@android:color/transparent"
                android:text="@={viewModel.detailsEditText}"
                android:textColor="#000"
                android:textSize="22sp"
                android:visibility="gone"

                />
        </LinearLayout>

<!--        <com.google.android.material.chip.Chip-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/addingDetailsEditeText"-->
<!--            app:layout_constraintTop_toTopOf="@id/note_details_imageView"-->
<!--           />-->


        <ImageView
            android:id="@+id/note_details_imageView"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:padding="8dp"
            android:src="@drawable/ic_note_details_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.886" />

        <ImageView
            android:id="@+id/date_picker_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_date_range_black_24dp"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="@id/note_details_imageView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.886"
        />

        <TextView
            android:id="@+id/save"
            android:layout_width="83dp"
            android:layout_height="32dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:text="@string/text_save"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="@id/date_picker_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.886" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>